force-app/main/default/objects/VCG_CPQ_Quote_Product__c/VCG_CPQ_Quote_Product__c.object-meta.xml
<CustomObject>
    <description>An individual line item on a quote</description>
    <label>Quote Product</label>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>