force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Add_on_Source_Quote_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Source_Quote_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add-on Source Quote Product</label>
    <referenceTo>VCG_CPQ_Quote_Product__c</referenceTo>
    <relationshipLabel>Add On Quote Products</relationshipLabel>
    <relationshipName>Add_On_Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>