force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Add_On_To_Asset__c.field-meta.xml
<CustomField>
    <fullName>Add_On_To_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add-On To Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Add-On Quote Products</relationshipLabel>
    <relationshipName>Add_On_Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>