force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Additional_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discounts__c</fullName>
    <label>Additional Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>