force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Adjusted_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_List_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated as: List Price - Program Percentage. Extended amount, not per-unit amount.</description>
    <label>Adj List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>