force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/All_Shipped__c.field-meta.xml
<CustomField>
    <fullName>All_Shipped__c</fullName>
    <formula>IF( Number_of_Open_Shipments__c =  Number_of_Shipment_Forecasts__c &amp;&amp; Number_of_Shipment_Forecasts__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Shipped</label>
    <type>Checkbox</type>
</CustomField>