force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Allowance__c.field-meta.xml
<CustomField>
    <fullName>Allowance__c</fullName>
    <label>Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>