force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <description>aka &quot;Annual Recurring Revenue&quot;. For Subscription products, ARR == Sales Price, for Perpetual products, ARR == X% of list (X is data lookup based on Product Type &amp; Product Family). Extended amount, not a per-unit amount.</description>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>