force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Annual_Unit_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Unit_Discount_Amount__c</fullName>
    <inlineHelpText>Annual Unit Discount Amount for subscription. One-time unit discount amount for perpetual.</inlineHelpText>
    <label>Annual Unit Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>