force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Annual_Unit_Uplift_Entered_As__c.field-meta.xml
<CustomField>
    <fullName>Annual_Unit_Uplift_Entered_As__c</fullName>
    <inlineHelpText>Annual Unit Uplift Amount for subscription. One-time unit uplift amount for perpetual.</inlineHelpText>
    <label>Annual Unit Uplift Entered As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>