force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>