force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Asset_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Term_End_Date__c</fullName>
    <label>Asset Term End Date</label>
    <type>Date</type>
</CustomField>