force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Auto_Added_QP_Line__c.field-meta.xml
<CustomField>
    <fullName>Auto_Added_QP_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set by the CPQ tool if the QP record was auto-added by the tool (as opposed to added by the user). Used to differentiate between QP records for products that can be auto-added or manually added.</inlineHelpText>
    <label>Auto-Added QP Line</label>
    <type>Checkbox</type>
</CustomField>