force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <description>License/Seat Count Band (i.e. the band in which the seat count falls ... A == 0-25, B == 26-50, etc.)</description>
    <label>Band</label>
    <length>1</length>
    <type>Text</type>
</CustomField>