force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <description>If populated, indicates that this product is part of a named bundle. CPQ Tool will recombine these products back into the &quot;bundle&quot; representation when displaying back to the user.</description>
    <label>Bundle Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>