force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>Text (Product__r.Business_Unit__c )</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>