force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/CGM__c.field-meta.xml
<CustomField>
    <fullName>CGM__c</fullName>
    <label>CGM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>