force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>