force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Contract_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Start_Date__c</fullName>
    <label>Contract Term Start Date</label>
    <type>Date</type>
</CustomField>