force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Decommission_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Effective_Date__c</fullName>
    <label>Decommission Effective Date</label>
    <type>Date</type>
</CustomField>