force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Decommission_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Quantity__c</fullName>
    <label>Decommission Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>