force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Decommission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Reason__c</fullName>
    <label>Decommission Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gone out of business</fullName>
            </value>
            <value>
                <fullName>Move to a different product family</fullName>
            </value>
            <value>
                <fullName>Change order after signing</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
            <value>
                <fullName>Reduction in number of licenses</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Sent to collections</fullName>
            </value>
            <value>
                <fullName>Using via another customer</fullName>
            </value>
            <value>
                <fullName>First year cancel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>