force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Decommission_Type__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Type__c</fullName>
    <label>Decommission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>