force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <inlineHelpText>Annual Total (not Unit) Discount Amount for subscription. One-time total discount amount for perpetual.</inlineHelpText>
    <label>Annual Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>