force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Discount_Amount_MX_Output__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_MX_Output__c</fullName>
    <inlineHelpText>Only used for Mexico output.</inlineHelpText>
    <label>Discount Amount (MX Output)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>