force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Discount_Approval_Groups__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Groups__c</fullName>
    <label>Discount Approval Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>