force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Discount_Entered_As_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_Entered_As_2__c</fullName>
    <inlineHelpText>Indicates how the discretionary discount  &amp; uplift have been entered. For Version 1 Quotes, it uses the original Annual Total Discount/Uplift fields. For Version 2, it uses either Annual or Monthly Unit. Set by CPQ only!</inlineHelpText>
    <label>Discount Entered As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Total</fullName>
            </value>
            <value>
                <fullName>Annual Unit</fullName>
            </value>
            <value>
                <fullName>Monthly Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>