force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Distributor_SKU__c.field-meta.xml
<CustomField>
    <fullName>Distributor_SKU__c</fullName>
    <description>Websense-specific</description>
    <label>Distributor SKU</label>
    <length>150</length>
    <type>Text</type>
</CustomField>