force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/DL_Code__c.field-meta.xml
<CustomField>
    <fullName>DL_Code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DL_Code</label>
    <type>Text</type>
</CustomField>