force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Dollar_Per_Load__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Per_Load__c</fullName>
    <label>$/Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>