force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Dollar_Per_Truck__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Per_Truck__c</fullName>
    <label>$/Truck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>