force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Extended_Term_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Term_Amount__c</fullName>
    <description>Amount charged for year 2 onward. (Total Contract Value == First Term Revenue + Extended Term Amount; TCV is captured at the Opp level, not at the Quote Product level.) Extended amount, not per-unit amount.</description>
    <label>Extended Term Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>