force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Extra_Licensed_Users__c.field-meta.xml
<CustomField>
    <fullName>Extra_Licensed_Users__c</fullName>
    <label>Extra Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>