force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/First_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Shipped_Date__c</fullName>
    <label>First Shipped Date</label>
    <summarizedField>Shipment_Forecast__c.Shipment_Date__c</summarizedField>
    <summaryForeignKey>Shipment_Forecast__c.Quote_Product__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>