force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/From_Asset__c.field-meta.xml
<CustomField>
    <fullName>From_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Migrations and Upgrades, this is the legacy asset the current product is being migrated/updated from.</description>
    <inlineHelpText>For Migrations and Upgrades, this is the legacy asset the current product is being migrated/updated from.</inlineHelpText>
    <label>From Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Quote Products (Migrated From Asset)</relationshipLabel>
    <relationshipName>MIgrated_Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>