force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/From_Product__c.field-meta.xml
<CustomField>
    <fullName>From_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Migrations and Upgrades, this is the legacy product the current product is being migrated/updated from.</description>
    <inlineHelpText>For Migrations and Upgrades, this is the legacy product the current product is being migrated/updated from.</inlineHelpText>
    <label>From Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Products (Migrated/Upgraded From)</relationshipLabel>
    <relationshipName>Migrated_Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>