force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Included_DCs__c.field-meta.xml
<CustomField>
    <fullName>Included_DCs__c</fullName>
    <inlineHelpText>Number of DCs included in the list price</inlineHelpText>
    <label>Included DCs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>