force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Included_Users__c.field-meta.xml
<CustomField>
    <fullName>Included_Users__c</fullName>
    <inlineHelpText>Number of Users included in the list price</inlineHelpText>
    <label>Included Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>