force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Instances__c.field-meta.xml
<CustomField>
    <fullName>Instances__c</fullName>
    <inlineHelpText>Roadnet only.</inlineHelpText>
    <label>Instances</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>