force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/IsResultValueOverride__c.field-meta.xml
<CustomField>
    <fullName>IsResultValueOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResultValueOverride</label>
    <type>Checkbox</type>
</CustomField>