force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <label>Lease Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Recurrent</fullName>
            </value>
            <value>
                <fullName>Cash, Finance (2 to 12 months)</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>44 Months</fullName>
            </value>
            <value>
                <fullName>48 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>