force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/License_Metric_Quantity__c.field-meta.xml
<CustomField>
    <fullName>License_Metric_Quantity__c</fullName>
    <label>License Metric Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>