force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/License_Type2__c.field-meta.xml
<CustomField>
    <fullName>License_Type2__c</fullName>
    <description>Copied from the Product record</description>
    <formula>TEXT( Product__r.License_Type__c )</formula>
    <inlineHelpText>Copied from the Product record</inlineHelpText>
    <label>License Type2</label>
    <type>Text</type>
</CustomField>