force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Licensed_DCs__c.field-meta.xml
<CustomField>
    <fullName>Licensed_DCs__c</fullName>
    <inlineHelpText>Roadnet only.</inlineHelpText>
    <label>DC&apos;s</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>