force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Licensed_DCs_Amount__c.field-meta.xml
<CustomField>
    <fullName>Licensed_DCs_Amount__c</fullName>
    <label>DCs Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>