force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Licensed_Users__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Users__c</fullName>
    <inlineHelpText>Roadnet only.</inlineHelpText>
    <label>Users</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>