force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Decommission</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>