force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>Initial List Price from pricing data (LP01 usually). This is an Extended amount, not per-unit.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>