force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Maintenance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Percent__c</fullName>
    <inlineHelpText>Only for perpetual software.</inlineHelpText>
    <label>Maintenance %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>