force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Map_Notes__c.field-meta.xml
<CustomField>
    <fullName>Map_Notes__c</fullName>
    <inlineHelpText>Geographic areas covered by maps</inlineHelpText>
    <label>Map Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>