force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Mobile_Assets__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Assets__c</fullName>
    <inlineHelpText>Roadnet only.</inlineHelpText>
    <label>Mobile Assets</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>