force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Price__c</fullName>
    <inlineHelpText>For subscription products only.</inlineHelpText>
    <label>Monthly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>