force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Monthly_Unit_Discount_Entered_As__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Discount_Entered_As__c</fullName>
    <description>User can enter the discount as either a currency amount or a percentage. The other value will be calculated and stored in the record. Calculations should be done using the value the user enters, and the UI should display only the value they enter back to the user.</description>
    <inlineHelpText>Monthly Unit Discount Amount for subscription. One-time unit discount amount for perpetual.</inlineHelpText>
    <label>Unit Discount Entered As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>