force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Monthly_Unit_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Discount_Percentage__c</fullName>
    <description>Discretionary Discount entered by the user. In the UI, user can enter a currency amount or a percentage. If they enter a currency amount, the amount gets converted to a percentage before being stored.</description>
    <inlineHelpText>Technically this is the &quot;Monthly Unit Discount&quot;, but a percentage is the same whether it is monthly, annual, or one-time (i.e. for perpetual products)</inlineHelpText>
    <label>Unit Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>