force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Monthly_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Price__c</fullName>
    <description>Monthly unit price of subscription/term products.</description>
    <inlineHelpText>Monthly unit price of subscription/term products.</inlineHelpText>
    <label>Monthly Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>