force-app/main/default/objects/VCG_CPQ_Quote_Product__c/fields/Monthly_Unit_Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Uplift_Amount__c</fullName>
    <inlineHelpText>Monthly Unit Uplift Amount for subscription. One-time unit uplift amount for perpetual.</inlineHelpText>
    <label>Unit Uplift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>